--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
+spring.datasource.platform=h2
 spring.datasource.url=jdbc:h2:file:~/test
 spring.datasource.username=clientapi
 spring.datasource.password=
@@ -9,3 +10,5 @@ spring.datasource.driver-class-name=org.h2.Driver
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.initialization-mode=always
